# Computacao_Grafica

./: CMakeLists.txt  README.md
dep/glad/src/: glad.c
dep/glfw/: cmake_uninstall.cmake
dep/glfw/src/: Makefile
include/: AxialExtruder.hpp  Camera.hpp  Circle.hpp  Clipping.hpp  Cube.hpp  EBO.hpp  Home.hpp  Line.hpp  Paraboloid.hpp  Paths.hpp  Pipe.hpp  Shader.hpp  Shape.hpp  Shapes.hpp  Sphere.hpp  SpongeBob.hpp  Square.hpp  Texture.hpp  Triangle.hpp  VBO.hpp  Window.hpp  main.hpp
shader/basic_shaders/fragment/: basic_line.fs  basic_sphere.fs  basic_triangle.fs
shader/basic_shaders/vertex/: basic_cube.vs  basic_sphere.vs  basic_square.vs
shader/light/: cube.fs  light.fs
shader/shaders_casa/fragment/: fragment_door.fs
source/: AxialExtruder.cpp  Circle.cpp  Clipping.cpp  Cube.cpp  Home.cpp  Line.cpp  Paraboloid.cpp  Pipe.cpp  Shader.cpp  Shape.cpp  Sphere.cpp  SpongeBob.cpp  Square.cpp  Texture.cpp  Triangle.cpp  Window.cpp  main.cpp
v2.0.0/: README.md
v2.0.0/include/: AxialExtruder.hpp  Home.hpp  Paraboloid.hpp  Pipe.hpp  Shader.hpp  Shapes.hpp  Sphere.hpp  Square.hpp  Triangle.hpp  VAO.hpp  main.hpp
v2.0.0/shader/light/: light.vs
v2.0.0/source/: Cube.cpp  EBO.cpp  Home.cpp  Paraboloid.cpp  Pipe.cpp  Shader.cpp  Sphere.cpp  Window.cpp  main.cpp
v3.0.0/: CMakeLists.txt  README.md
v3.0.0/include/: Clipping.hpp  Mesh.hpp  Shape.hpp  main.hpp
v3.0.0/source/: Camera.cpp  Clipping.cpp  Mesh.cpp  Shape.cpp  VBO.cpp  main.cpp
v3.1.0/: README.md
v3.1.0/include/: Mesh.hpp  Paths.hpp  Shape.hpp
v3.1.0/source/: Mesh.cpp  Texture.cpp  VAO.cpp
(+12 files in other folders)
